[package]
name = "hexin"
version = "0.1.0"
edition = "2021"
description = "通用 CPU 核心调度可视化软件"
authors = ["marry"]

[dependencies]
# GUI 框架
eframe = "0.29"
egui_plot = "0.29"

# 系统信息
sysinfo = "0.32"
libc = "0.2"
nix = { version = "0.29", features = ["sched", "process", "fs"] }

# 序列化和配置
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
